# ati-tcp-file-transfer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  throughput_bench.cpp
cmake/toolchains/: aarch64-linux-gnu.cmake
include/ftx/: version.hpp
include/ftx/io/: file_sink.hpp  file_source.hpp  resume_state.hpp
include/ftx/proto/: decoder.hpp  frame.hpp  messages.hpp  types.hpp
include/ftx/transport/: client.hpp  connection.hpp  server.hpp  tls.hpp
include/ftx/util/: blake3.hpp  byteorder.hpp  crc32c.hpp
scripts/: gen-test-certs.sh  smoke_e2e.sh
src/: CMakeLists.txt
src/cli/: main.cpp
src/lib/: version.cpp
src/lib/io/: file_sink.cpp  file_source.cpp  resume_state.cpp
src/lib/proto/: decoder.cpp  frame.cpp  messages.cpp  types.cpp
src/lib/transport/: client.cpp  connection.cpp  server.cpp  tls.cpp
src/lib/util/: blake3.cpp  crc32c.cpp
tests/: CMakeLists.txt  smoke_test.cpp
tests/io/: resume_state_test.cpp
tests/proto/: decoder_test.cpp  frame_test.cpp  messages_test.cpp
tests/transport/: fault_injection_test.cpp  large_transfer_test.cpp  loopback_test.cpp  tls_loopback_test.cpp
tests/util/: blake3_test.cpp  crc32c_test.cpp
